# Annak

./: .gitignore  CMakeLists.txt  configuration.json
include/: asserts_functions.h  capacities.h  car.h  city.h  configuration.h  helicopter.h  images.h  input_functions.h  mouse_events.h  movies.h  person.h  place.h  resources.h  road.h  square.h  start_functions.h  tile.h  truck.h  vehicle.h  village.h  village_city.h  world.h
resources/code/: Command.cpp  Command.h  Input.cpp  Input.h  Input1.cpp  Input1.h
src/: asserts_functions.cpp  car.cpp  city.cpp  configuration.cpp  helicopter.cpp  images.cpp  input_functions.cpp  main.cpp  mouse_events.cpp  resources.cpp  road.cpp  square.cpp  start_functions.cpp  truck.cpp  village.cpp  world.cpp
